suite/components/shell/nsGNOMEShellService.cpp
@@ -271,7 +271,9 @@ nsGNOMEShellService::GetCanSetDesktopBackground(bool* aResult)
 
 NS_IMETHODIMP
 nsGNOMEShellService::SetDesktopBackground(dom::Element* aElement,
-                                          int32_t aPosition)
+                                          int32_t aPosition,
+                                          const nsACString& aImageName)
+
 {
   nsCString brandName;
   nsresult rv = GetBrandName(brandName);
