suite/components/shell/content/setDesktopBackground.js
@@ -7,12 +7,13 @@
 var gShell = Cc["@mozilla.org/suite/shell-service;1"]
                .getService(Ci.nsIShellService);
 
-var gImage, gPosition, gPicker, gDesktop;
+var gImage, gImageName, gPosition, gPicker, gDesktop;
 
 function onLoad()
 {
   document.getElementById("itemsBox").hidden = /Mac/.test(navigator.platform);
   gImage = window.arguments[0];
+  gImageName = window.arguments[1];
   gPosition = document.getElementById("position");
   gPicker = document.getElementById("picker");
   gDesktop = document.getElementById("desktop");
@@ -40,7 +41,8 @@ function onApply()
   if (!gPicker.parentNode.hidden)
     gShell.desktopBackgroundColor = parseInt(gPicker.color.substr(1), 16);
 
-  gShell.setDesktopBackground(gImage, Ci.nsIShellService[gPosition.value]);
+  gShell.setDesktopBackground(gImage, Ci.nsIShellService[gPosition.value],
+                              gImageName);
 }
 
 function updatePosition()
